# illum

./: .gitignore  .gitmodules  README.org  modules.sh  poster.org  todo.org  todo2.org
data/: phobos_sunpos.txt  sunpos_Mercury_110101_140101_dt12h.txt  vesta_sunpos_100.txt  vesta_sunpos_12x72.txt  vesta_sunpos_72x720.txt  vesta_sunpos_Jan2011_dt4min.txt
share/: config.yaml
slurm/: mpitest.sh  phobosDI.sh  vestaDI.sh
src/cpp/: CMakeLists.txt  arma_util.cpp  arma_util.hpp  cet.h  cet.hpp  common.hpp  conduction.cpp  conduction.hpp  conductionQ.f  conductionT.f  config.hpp.in  constants.hpp  icq.cpp  icq.hpp  illum.cpp  illum.hpp  illum_cli.cpp  illum_gui.cpp  illum_renderer_cli.cpp  kdtree.cpp  kdtree.hpp  obj_util.cpp  obj_util.hpp  phobos_test.cpp  plotter.cpp  sp_inds.hpp  thermal.hpp
src/py/: README.org  arma.py  build_mesh_transfer_tables.py  disk.py  horizon.py  interpolate_mesh_field.py  merge_views_and_annotate.py  mesh_smooth.py  obj.py  octree.py  plot_dot_product.py  plot_elevation.py  plot_face_inds.py  plot_faces_in_extent.py  plot_num_facing.py  plot_octree_node.py  plot_phobos.py  points.py  render_frames.py  scratch.py  shader.frag  shader.vert  sparse.py  sphere_shell.py  stats_plots.py  util.py  visibility.py  visibility_from_file.py
src/py/tests/: test1.py
src/sh/: runjob.sh  stats_job.sh
src/tex/: illum.bib  illum.tex
src/tex/poster/: diff_therm_avg.xcf  diff_therm_max.xcf  flow-diagram.eps  flow-diagram.ipe  poster.bib  poster.tex  therm_avg.xcf  therm_max.xcf
